--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -4,7 +4,7 @@
   clear: both;
   font-weight: normal;
   line-height: 1.42857143;
-  color: #333;
+  color: #ffffff;
   white-space: nowrap;
 }
 
@@ -14,4 +14,19 @@
 
 .dropdown-menu > li > a.portfolio-source {
   display: inline-block;
+}
+
+li.ecr-footer-links {
+
+}
+li.ecr-footer-links > a {
+
+}
+
+li > .er-email {
+  background-color: #1485CC;
+}
+
+li > .er-email:before {
+  content: "@"
 }
