--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -56,5 +56,13 @@ ul.er-footer-links > li > a {
 }
 
 .navbar-brand.er-navbar-brand {
-  color: #ffffff
+  color: #ffffff;
+}
+
+.er-footer-links {
+  color: #C31B1B;
+}
+
+.er-footer-links > li > a {
+  color: #C31B1B;
 }
