--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -11,9 +11,12 @@
   white-space: nowrap;
 }
 
+
 .dropdown-menu.er-dropdown-menu {
   border: none;
-  background-color: inherit
+  background: inherit;
+  box-shadow: none;
+  border-image: none;
 }
 
 .dropdown-menu > li > .er-navbar-list-item-link {
@@ -24,6 +27,7 @@
 .dropdown-menu > li > .er-navbar-list-item-link:hover {
   color: #C31F26;
 }
+
 
 .dropdown-menu > li > a.er-portfolio-link {
   display: inline-block;
@@ -57,21 +61,24 @@ ul.er-footer-links > li > a {
 }
 
 body {
-    /* initial background inspiration thanks to Lea Verou at
-    http://lea.verou.me/css3patterns/#carbon-fibre */
-  background:
-  radial-gradient(black 15%, transparent 16%) 0 0,
-  radial-gradient(black 15%, transparent 16%) 8px 8px,
-  radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
-  radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
-  background-color:#282828;
-  background-size:16px 16px;
-  border: none
+    /* slightly edited version of Lea Verou's "starry night" design at
+    http://lea.verou.me/css3patterns/#starry-night */
+
+
+  background-color:#0A090E;
+  background-image:
+  radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
+  radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px),
+  radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px),
+  radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
+  background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
+  background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
 }
 
 .er-navbar {
   background: inherit;
-  border: none
+  border: none;
+  box-shadow: none
 }
 
 .er-navbar > a {
@@ -79,6 +86,10 @@ body {
 }
 
 .navbar-nav.er-navbar-nav > li > a {
+  color: #ffffff;
+}
+
+.navbar-nav.er-navbar-nav > li > a:focus {
   color: #ffffff;
 }
 
