--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -138,7 +138,7 @@ body {
 
 .er-subheading {
   font-size: 200%;
-  line-height: 0.5;
+  /*line-height: 0.5;*/
   text-align: center;
 }
 .er-subheading span {
