--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -280,6 +280,12 @@ a.gray-text:focus {
   color: #C31F26;
 }
 
+.er-project-detail {
+  padding-bottom: 25px;
+}
+
+/* About */
+
 .biography {
   text-align: left;
 }
@@ -288,6 +294,7 @@ a.gray-text:focus {
   text-align: left;
   padding-left: 15px;
 }
+
 
 .er-fun-fact {
   padding-left: 0px;
