dirty history navigation works

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -118,7 +118,8 @@ body {
   background: inherit
 }
 
-.navbar-brand.er-navbar-brand {
+.navbar-brand.er-navbar-brand,
+.navbar-brand.er-navbar-brand:focus {
   color: #ffffff;
 }
 
